tooling/nargo_cli/tests/snapshots/execution_success/wrapping_operations/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _19",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 8)] []",
    "BLACKBOX::RANGE [(_1, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 340282366920938463463374607431768211455 ], EXPR [ 256 ]], outputs: [_2, _3]",
    "BLACKBOX::RANGE [(_2, 246)] []",
    "BLACKBOX::RANGE [(_3, 8)] []",
    "EXPR [ (1, _0) (-256, _2) (-1, _3) 340282366920938463463374607431768211455 ]",
    "EXPR [ (-1, _2) (-1, _4) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [(_4, 246)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _2) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_5]",
    "EXPR [ (-1, _2, _5) (85500948718122168836900022442411230814642048439125134155071110103811751936, _5) (1, _6) -1 ]",
    "EXPR [ (-1, _2, _6) (85500948718122168836900022442411230814642048439125134155071110103811751936, _6) 0 ]",
    "EXPR [ (1, _3, _6) (-1, _7) 0 ]",
    "BLACKBOX::RANGE [(_7, 0)] []",
    "EXPR [ (-1, _1) (1, _3) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 1 ], EXPR [ 256 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [(_8, 246)] []",
    "BLACKBOX::RANGE [(_9, 8)] []",
    "EXPR [ (1, _1) (-256, _8) (-1, _9) 1 ]",
    "EXPR [ (-1, _8) (-1, _10) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [(_10, 246)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _8) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_11]",
    "EXPR [ (-1, _8, _11) (85500948718122168836900022442411230814642048439125134155071110103811751936, _11) (1, _12) -1 ]",
    "EXPR [ (-1, _8, _12) (85500948718122168836900022442411230814642048439125134155071110103811751936, _12) 0 ]",
    "EXPR [ (1, _9, _12) (-1, _13) 0 ]",
    "BLACKBOX::RANGE [(_13, 0)] []",
    "EXPR [ (-1, _0) (1, _9) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1, _1) 0 ], EXPR [ 256 ]], outputs: [_14, _15]",
    "BLACKBOX::RANGE [(_14, 246)] []",
    "EXPR [ (1, _1, _1) (-256, _14) (-1, _15) 0 ]",
    "EXPR [ (-1, _14) (-1, _16) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [(_16, 246)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _14) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_17]",
    "EXPR [ (-1, _14, _17) (85500948718122168836900022442411230814642048439125134155071110103811751936, _17) (1, _18) -1 ]",
    "EXPR [ (-1, _14, _18) (85500948718122168836900022442411230814642048439125134155071110103811751936, _18) 0 ]",
    "EXPR [ (1, _15, _18) (-1, _19) 0 ]",
    "BLACKBOX::RANGE [(_19, 0)] []",
    "EXPR [ (1, _15) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
